--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,5 +12,6 @@
 
       <button type="submit" class="btn">Register</button>
     </div>
+    <p *ngIf="messageError" class="message-error">{{ messageError }}</p>
   </form>
 </div>
