--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -42,3 +42,10 @@ input:focus {
 .form > * {
   margin: 5px;
 }
+
+.message-error {
+  background-color: red;
+  padding: 5px;
+  width: 25%;
+  color: white;
+}
