--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,8 +1,16 @@
 <h4 *ngIf="cart.length < 1">El carrito esta vacio</h4>
 <div class="cart">
-  <app-product-cart
-    [product]="product"
-    *ngFor="let product of cart"
-    (deletedProduct)="deletedToShoppingCart($event)"
-  ></app-product-cart>
+  <div class="item-cart">
+    <app-product-cart
+      [product]="product"
+      *ngFor="let product of cart"
+      (deletedProduct)="deletedToShoppingCart($event)"
+      (updateQtyItem)="updateQty($event)"
+      (updateQtyItem)="updateQty($event)"
+
+    ></app-product-cart>
+  </div>
+  <div class="total-cart">
+    <h2>Total: {{ total }} €</h2>
+  </div>
 </div>
