--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,4 +1,12 @@
-.cart {
+.cart{
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 15px;
+  justify-items: center;
+}
+
+.item-cart {
   margin: 20px;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
