--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,16 +2,16 @@
   <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
     <div class="form">
       <label for="email">Email</label>
-      <input type="email" name="email" id="email" required ngModel />
+      <input type="email" name="email" id="email" placeholder="Type your email..." required ngModel />
 
       <label for="password">Password</label>
-      <input type="password" name="password" id="password" ngModel />
+      <input type="password" name="password" id="password" placeholder="Type your password..." ngModel />
 
       <button type="submit" class="btn">Log in</button>
     </div>
     <div>
-      <h5><a href="" routerLink="/register">Registrarse</a></h5>
-      <p>¿Quieres ser vendedor?</p>
+      <h5><a href="" routerLink="/register">Register</a></h5>
+      <p><a href="" routerLink="">Do you want a seller?</a></p>
     </div>
   </form>
 </div>
