--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -37,6 +37,7 @@
     </nav>
     <div class="info">
       <div class="account">
+        <p *ngIf="currentUser() != '' "> {{ username }} </p>
         <button class="btn" (click)="btnLogin()" *ngIf="!isLogged()">Log-in</button>
         <button class="btn" (click)="loggedOut()" *ngIf="isLogged()">Log-out</button>
       </div>
