--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,8 @@ h2 {
   border: 2px solid #ACD9B2;
   background: #ACD9B2;
 }
+
+.btn:hover{
+  background-color: #5fb56a;
+  border: 2px solid #5fb56a;
+}
