--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,10 @@ h2 {
   background-color: #5fb56a;
   border: 2px solid #5fb56a;
 }
+
+.message-error {
+  background-color: red;
+  padding: 5px;
+  width: 25%;
+  color: white;
+}
