pagination is finished

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -12,4 +12,6 @@
   </div>
 </div>
 
-<app-pagination></app-pagination>
+<app-pagination
+  (currentPageEmit)="changePage($event)"
+></app-pagination>
