--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -1,13 +1,13 @@
 <div class="pagination">
 
-  <div *ngIf="currentPage > 1" class="pagination__prev"><a>Anterior</a></div>
+  <div *ngIf="currentPage > 1" class="pagination__prev" (click)="previous()"><a>&#171;</a></div>
 
   <div class="pagination__text">
 
-      <p>Página {{currentPage}} de {{totalPages}}</p>
+      <p>Page {{currentPage}} de {{totalPages}}</p>
 
   </div>
 
-  <div *ngIf="currentPage < totalPages" class="pagination__next"><a>Siguiente</a></div>
+  <div *ngIf="currentPage < totalPages" class="pagination__next" (click)="next()"><a>&#187;</a></div>
 
 </div>
